table of contents added in css

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@300;400&display=swap');
+
+/*____________________
+Table of Contents
+1. Global Styles
+2. Typography
+3. Layout
+3.1 Reusable
+3.2 Other
+4. Areas
+4.1 Header
+4.2 Introduction
+    etc.
+5. Media Queries
+____________________*/
+
+
+/*__________1. Global Styles__________*/
+
+/*___1.1 Variables___*/
+
+
+/*__________2. Typography___________*/
+
+/*__________3. Layout__________*/
+
+/*___3.1 Reusables___*/
+
+/*___3.2 Other___*/
+
+/*__________4. Areas__________*/
+
+/*___4.1 HEADER___*/
+
+/*___4.2 MAIN___*/
+
+/*__4.2.1 MAIN-INNER-CONTAINER-1__*/
+
+
+/*__4.2.2 MAIN-INNER-CONTAINER-2__*/
+
+
+/*__4.2.3 MAIN-INNER-CONTAINER-3__*/
+
+
+/*___4.3 FOOTER___*/
+
+/*__________5. Media Queries__________*/
