--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@300;400&display=swap');
-
 /*____________________
 Table of Contents
 1. Global Styles
@@ -43,15 +41,15 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: merriweather, Serif;
+    font-family: 'Merriweather', Serif;
 
 }
 
 h1  {
     color: var(--floating-text-color);
-    font-size: 50px;
+    font-size: 55px;
     text-align: center;
-    max-width: 850px;
+
 }
 
 
@@ -120,20 +118,22 @@ h4 {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    gap: 2em;
-    font-weight: 400;
-    padding: 25px 10px 10px;
+    gap: 2.5em;
+    font-weight: 500;
+    padding: 22px 10px 10px;
     font-size: 15px;
 }
 
 .navigation__item {
     list-style-type: none;
+
 }
 
 .navigation__item a {
     text-transform: capitalize;
     text-decoration: none;
     color: var(--floating-text-color);
+
 
 }
 
@@ -147,24 +147,38 @@ h4 {
 }
 
 .header__title {
+    padding-top: 115px;
+    max-width: 850px;
+    letter-spacing: -2px;
+    line-height: 55px;
 
 }
 
-.intro__title {
-    /*font-weight: lighter;*/
-    display: inline-block;
-    color: white;
+.header__sub {
     font-size: 30px;
-    padding: 0.75em;
-    max-width: 950px;
+    color: var(--floating-text-color);
+    font-weight: 300;
 }
+
 
 .button--active {
-
+    text-transform: uppercase;
+    background-color: #ed4385;
+    color: white;
+    font-size: 18px;
+    word-spacing: 3px;
+    border: 20px solid #ed4385;
+    border-radius: 50px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+    box-shadow: 0 11px 13px -10px black;
+    letter-spacing: 1px;
 }
 
 .header__wave-img {
-
+    padding-top: 30px;
 }
 
 /*___4.2 INTRO___*/
@@ -173,17 +187,31 @@ h4 {
 }
 
 .intro__inner-container {
-
+    padding-top: 160px;
+    padding-bottom: 100px;
 }
 
 .intro__title {
-    color: var(--main-color);
-    font-size: 30px;
     text-align: center;
+    color: var(--main-color);
+    font-size: 29px;
+    max-width: 900px;
+    padding: 0.60em;
+    line-height: 48px;
+
 }
 
+.intro__title:nth-of-type(2) {
+    max-width: 1000px;
+}
 .intro__question-click {
+    font-size: 21px;
+    padding-top: 50px;
+    letter-spacing: 0.2px;
+}
 
+.intro__click-here {
+    text-decoration: none;
 }
 
 
@@ -195,7 +223,7 @@ h4 {
 
 .projects__inner-container {
     background-color: var(--projects-bg-color);
-    gap: 3em;
+    /*gap: 3em;*/
 }
 
 
@@ -204,7 +232,7 @@ h4 {
     flex-direction: row;
     justify-content: flex-start;
     /*flex-wrap: wrap-reverse;*/
-    padding: 3em;
+    padding: 2em;
     /*margin: ;*/
     border: 2px solid blue;
 }
@@ -218,7 +246,7 @@ h4 {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 2em;
+    gap: 1.5em;
     /*border: 2px solid orange;*/
 }
 
@@ -227,16 +255,31 @@ h4 {
 }
 
 .projects__squiggle-img {
-    width: 68px;
+    width: 55px;
 
 }
 
 .projects__text {
     font-size: 20px;
-    letter-spacing: 1.2px;
+    letter-spacing: 1px;
     font-weight: 400;
+    max-width: 450px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 50px;
+
 
 }
+
+/*.projects__text:nth-child(even) {*/
+/*    font-size: 20px;*/
+/*    letter-spacing: 1px;*/
+/*    font-weight: 400;*/
+/*    max-width: 450px;*/
+/*    padding-top: 30px;*/
+/*    padding-bottom: 30px;*/
+/*    padding-left: 50px;*/
+/*}*/
 
 .projects__link {
     text-transform: uppercase;
@@ -245,17 +288,18 @@ h4 {
 }
 
 .projects__img-wrapper {
-    flex-basis: 900px;
+    flex-basis: 800px;
     flex-grow: 0;
     flex-shrink: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-
+    box-shadow: 1px 11px 13px -6px rgba(0,0,0,0.68);
 
 }
 .projects__img{
-    width: 100%;
+    /*height: 400px;*/
+
 }
 
 /*___4.4 SERVICES___*/
@@ -264,24 +308,29 @@ h4 {
 }
 
 .services__inner-container {
-    flex-basis: 360px;
+    /*flex-basis: 360px;*/
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    aspect-ratio: 1 / 1;
+    justify-content: space-between;
+    align-content: space-evenly;
+    /*aspect-ratio: 1 / 1;*/
+    padding: 2em;
+    margin: 2em;
+    flex-wrap: wrap;
 }
 
 .services__wrapper {
-    /*flex-basis: 360px;*/
-    /*flex-grow: ;*/
-    /*display: flex;*/
-    /*flex-direction: row;*/
-    /*justify-content: space-around;*/
-    /*flex-wrap: wrap;*/
-    /*aspect-ratio: 1 / 1;*/
-    padding: 2em;
+    flex-basis: 360px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: space-evenly;
+    aspect-ratio: 1 / 1;
+    padding: 3em;
     border: 1px solid var(--main-color);
+    /*width: 410px;*/
+    /*min-height: auto;*/
+
 
 }
 
