--- a/styles.css
+++ b/styles.css
@@ -368,7 +368,7 @@ h4 {
 /*___4.5 FOOTER___*/
 .footer__outer-container {
     /*background-color: var(--main-color);*/
-    background: linear-gradient(90deg, rgba(87,34,205,1) 45%, rgba(72,69,228,1) 65%);
+    background: linear-gradient(180deg, rgba(72, 69, 228, 1) 32%, rgba(87, 34, 205, 1) 55%);
 }
 
 /*.footer__inner-container {*/
